# model/error.go
@@ -1,0 +1,7 @@
+package model
+
+import "errors"
+
+var AlreadyExists = errors.New("unique constraint error")
+
+var InvalidUser = errors.New("invalid password or email")
